--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2368,4 +2368,13 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   doi     = {10.1039/D2PY01487D},
 }
 
+@Article{Turpin,
+  author  = {Geosmin A. Turpin and Andrew Nelson and Stephen A. Holt and Luke W. Giles and Izabela Milogrodzka and Roger G. Horn and Rico F. Tabor, and Leonie van’t Hag},
+  title   = {Investigating Adsorption of Cellulose Nanocrystals at Air–Liquid and Substrate–Liquid Interfaces after pH Manipulation},
+  journal = {Advanced Materials Interfaces},
+  year    = {2023},
+  number  = {2202452},
+  doi     = {10.1002/admi.202202452},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
