--- a/my_publications.bib
+++ b/my_publications.bib
@@ -1608,7 +1608,7 @@ observed. These results emphasize the importance of using thermally stable mater
   timestamp = {2018.01.23},
 }
 
-@Article{,
+@Article{
   author  = {Akers, P.W. and Le, N. C. H and Nelson, A. R. J. and McKenna, M. and O'Mahony, C. and McGillivray, D. J. and Gubala, V. and Williams, D.},
   title   = {Surface engineering of poly(methylmethacrylate): Effects on fluorescence immunoassay},
   journal = {Biointerphases},
