--- a/my_publications.bib
+++ b/my_publications.bib
@@ -1513,7 +1513,7 @@ observed. These results emphasize the importance of using thermally stable mater
 }
 
 @Article{Akers2017,
-  author    = {Peter. W. Akers and Andrew J. Dingley and Simon Swift and Andrew. R. J Nelson and Julie Martin and Duncan J. McGillivray},
+  author    = {Peter. W. Akers and Andrew J. Dingley and Simon Swift and Andrew. R. J Nelson and Julie Martin and Duncan J. McGillivray},
   title     = {Using Neutron Reflectometry to Characterize Antimicrobial Protein Surface Coatings},
   journal   = {Journal of Physical Chemistry B},
   year      = {2017},
@@ -1608,8 +1608,8 @@ observed. These results emphasize the importance of using thermally stable mater
   timestamp = {2018.01.23},
 }
 
-@Article{
-  author  = {Akers, P.W. and Le, N. C. H and Nelson, A. R. J. and McKenna, M. and O'Mahony, C. and McGillivray, D. J. and Gubala, V. and Williams, D.},
+@Article{Akers2017a,
+  author = {Akers, P.W. and Le, N. C. H and Nelson, A. R. J. and McKenna, M. and O'Mahony, C. and McGillivray, D. J. and Gubala, V. and Williams, D.},
   title   = {Surface engineering of poly(methylmethacrylate): Effects on fluorescence immunoassay},
   journal = {Biointerphases},
   year    = {2017},
@@ -1849,7 +1849,7 @@ observed. These results emphasize the importance of using thermally stable mater
   author       = {Andrew Nelson and Stuart Prescott and Andrew McCluskey and Isaac Gresham},
   title        = {{refnx - Neutron and X-ray Reflectometry Analysis in Python v0.1.5}},
   howpublished = {pypi.org, 10.5281/zenodo.2629430},
-  month        = april,
+  month        = apr,
   year         = {2019},
   doi          = {10.5281/zenodo.2629430},
   keywords     = {Software},
@@ -1899,7 +1899,7 @@ observed. These results emphasize the importance of using thermally stable mater
   author       = {Andrew Nelson},
   title        = {{Motofit - Co-refinement of Neutron and X-ray Reflectometry Data using Igor Pro, v8}},
   howpublished = {www.sourceforge.net/projects/motofit},
-  month        = july,
+  month        = jul,
   year         = {2018},
   keywords     = {Software},
 }
@@ -2369,7 +2369,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
 }
 
 @Article{Turpin,
-  author  = {Geosmin A. Turpin and Andrew Nelson and Stephen A. Holt and Luke W. Giles and Izabela Milogrodzka and Roger G. Horn and Rico F. Tabor, and Leonie van’t Hag},
+  author  = {Geosmin A. Turpin and Andrew Nelson and Stephen A. Holt and Luke W. Giles and Izabela Milogrodzka and Roger G. Horn and Rico F. Tabor and Leonie van't Hag},
   title   = {Investigating Adsorption of Cellulose Nanocrystals at Air–Liquid and Substrate–Liquid Interfaces after pH Manipulation},
   journal = {Advanced Materials Interfaces},
   year    = {2023},
