--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2365,6 +2365,8 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   title   = {Cosolvent effects on the structure and thermoresponse of a polymer brush: PNIPAM in DMSO–water mixtures},
   journal = {Polymer Chemistry},
   year    = {2023},
+  vol     = {14},
+  pages   = {1526},
   doi     = {10.1039/D2PY01487D},
 }
 
