--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2381,7 +2381,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
 
 @article{Katselas2023,
     author = {Katselas, Anthony and Gresham, Isaac J. and Nelson, Andrew R. J. and Neto, Chiara},
-    title = "{Exploring the water capture efficiency of covalently attached liquid-like surfaces}",
+    title = {Exploring the water capture efficiency of covalently attached liquid-like surfaces},
     journal = {The Journal of Chemical Physics},
     volume = {158},
     number = {21},
