--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2409,5 +2409,20 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     abstract = {Abstract The effect of electron-beam patterning on the water uptake and ionic conductivity of Nafion films using a combination of X-ray photoelectron spectroscopy, quartz crystal microbalance studies, neutron reflectometry, and impedance spectroscopy is reported. The aim is to further characterize the nanoscale patterned Nafion structures recently used as a key element in novel ion-to-electron transducers by Gluschke et al. To enable this, the electron beam patterning process is developed for large areas, achieving patterning speeds approaching 1 cm2 h−1, and patterned areas as large as 7 cm2 for the neutron reflectometry studies. It is ultimately shown that electron-beam patterning affects both the water uptake and the ionic conductivity, depending on film thickness. Type-II adsorption isotherm behavior is seen for all films. For thick films (≈230 nm), a strong reduction in water uptake with electron-beam patterning is found. In contrast, for thin films (≈30 nm), electron-beam patterning enhances water uptake. Notably, for either thickness, the reduction in ionic conductivity arising from electron-beam patterning is kept to less than an order of magnitude. Mechanisms are proposed for the observed behavior based on the known complex morphology of Nafion films to motivate future studies of electron-beam processed Nafion.}
 }
 
+@article{gresham2023,
+    author = {Gresham, Isaac and Lilley, Seamus and Nelson, Andrew and Koynov, Kaloian and Neto, Chiara},
+    title = {Nanostructure Explains the Behavior of Slippery Covalently Attached Liquid Surfaces},
+    journal = {Angewandte Chemie International Edition},
+    volume = {n/a},
+    number = {n/a},
+    pages = {e202308008},
+    keywords = {slippery surfaces, droplet mobility, self-assembled monolayers, polymer brush, single-molecule force spectroscopy},
+    doi = {https://doi.org/10.1002/anie.202308008},
+    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/anie.202308008},
+    eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/anie.202308008},
+    abstract = {Slippery covalently-attached liquid surfaces (SCALS) with low contact angle hysteresis (CAH, <5◦) and nanoscale thickness display impressive anti-adhesive properties, similar to lubricant-infused surfaces. Their efficacy is generally attributed to the liquid-like mobility of the constituent tethered chains. However, the precise physico-chemical properties that facilitate this mobility are unknown, hindering rational design. This work quantifies the chain length, grafting density, and microviscosity of a range of polydimethylsiloxane (PDMS) SCALS, elucidating the nanostructure responsible for their properties. Three prominent methods are used to produce SCALS, with characterization carried out via single-molecule force measurements, neutron reflectometry, and fluorescence correlation spectroscopy. CO2 snow-jet cleaning was also shown to reduce the CAH of SCALS via a modification of their grafting density. SCALS behavior can be predicted by reduced grafting density, Σ, with the lowest water CAH achieved at Σ ≈ 2. This study provides the first direct examination of SCALS grafting density, chain length, and microviscosity and supports the hypothesis that SCALS properties stem from a balance of layer uniformity and mobility.}
+}
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
