--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2425,7 +2425,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
 
 @article{robertson2023b,
     author = {Robertson, Hayden and Elliott, Gareth R. and Nelson, Andrew R. J. and Le Brun, Anton P. and Webber, Grant B. and Prescott, Stuart W. and Craig, Vincent S. J. and Wanless, Erica J. and Willott, Joshua D.},
-    title = {Underscreening in concentrated electrolytes: re-entrant Q1 swelling in polyelectrolyte brushes},
+    title = {Underscreening in concentrated electrolytes: re-entrant swelling in polyelectrolyte brushes},
     journal = {Physical Chemistry Chemical Physics},
     volume = {n/a},
     number = {n/a},
