--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2434,6 +2434,30 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     abstract = {Hypersaline environments are ubiquitous in nature and are found in myriad technological processes. Recent empirical studies have revealed a significant discrepancy between the predicted and observed screening lengths at high salt concentrations, a phenomenon referred to as underscreening. Herein we investigate underscreening using a cationic polyelectrolyte brush as an exemplar. Poly(2-(methacryloyloxy)ethyl)trimethylammonium (PMETAC) brushes were synthesised and their internal structural changes and swelling response monitored with neutron reflectometry and spectroscopic ellipsometry. Both techniques revealed a monotonic brush collapse as the concentration of symmetric monovalent electrolyte increased. However, a non-monotonic change in brush thickness was observed in all multivalent electrolytes at higher electrolyte concentrations, known as re-entrant swelling; indicative of underscreening. For all electrolytes, numerical self-consistent field theory predictions align with experimental studies in the low salt concentration (Debye–Hu ̈ckel) region. Analysis suggests that the classical theory of electrolytes is insufficient to describe the screening lengths observed at high salt concentrations and that the re-entrant polyelectrolyte brush swelling in the high salt concentration region is consistent with regular underscreening.}
 }
 
+@article{doi:10.1021/acs.macromol.3c01469,
+    author = {Ng, Gervase and Wu, Zilong and Zhang, Tong and Dang, Anh Phong and Yao, Yin and Nelson, Andrew R. J. and Prescott, Stuart W. and Postma, Almar and Moad, Graeme and Hawker, Craig J. and Boyer, Cyrille},
+    title = {Exploiting NIR Light-Mediated Surface-Initiated PhotoRAFT Polymerization for Orthogonal Control Polymer Brushes and Facile Postmodification of Complex Architecture through Opaque Barriers},
+    journal = {Macromolecules},
+    volume = {56},
+    number = {19},
+    pages = {7898-7908},
+    year = {2023},
+    doi = {10.1021/acs.macromol.3c01469},
+    abstract = { An oxygen-tolerant SI-PhotoRAFT technique has been developed for the efficient synthesis of surface-tethered polymer brushes under low-energy near-infrared (NIR) light. This technique takes advantage of the unique properties of NIR light, in particular enhanced penetration, to effectively prepare polymeric coatings, even through barriers that are opaque to visible light. The NIR-mediated SI-PhotoRAFT polymerization technique was utilized to precisely modulate brush height in direct correlation with the irradiation time. Additionally, this technique facilitated sequential chain extension, enabling the fabrication of block copolymer brushes. Moreover, the incorporation of a photoresponsive monomer, 7-[4-(trifluoromethyl)coumarin]acrylamide [2-(2-oxo-4-(trifluoromethyl)-2H-chromen-7-yl)acrylamide, TCAm], within the poly(N,N-dimethylacrylamide) brushes enables orthogonal control over polymerization and cross-linking processes through the use of two different wavelengths (NIR and UV light). When exposed to a UV source (λ = 365 nm, 18.2 mW/cm2), the TCAm undergoes dimerization triggering cross-linking of the grafted brush “arms”. Furthermore, by utilizing the enhanced penetration of NIR light, a polymeric coating was prepared on the inner walls of a tube that was opaque to visible light. Finally, this process is successfully applied to the synthesis of antifouling surfaces on poly(dimethylsiloxane)-coated silicon wafers, leading to inhibition of biofouling. }
+}
+
+@article{https://doi.org/10.1002/macp.202300315,
+    author = {Frost, Charlotte and Wiedbrauk, Sandra and Graham, Elizabeth and Yepuri, Nageshwar R. and Nelson, Andrew R. J. and Boase, Nathan R. B.},
+    title = {Measuring the Interactions and Influence of Amphipathic Copolymers with Lipid Monolayers and Bilayers as Models of Biological Membranes},
+    journal = {Macromolecular Chemistry and Physics},
+    volume = {n/a},
+    number = {n/a},
+    pages = {2300315},
+    keywords = {lipids, nanomedicines, neutron reflectometry, polymers, quartz crystal microbalance},
+    doi = {10.1002/macp.202300315},
+    abstract = {Abstract Amphipathic copolymers are useful materials for nanomedicine, owing to their ability to self-assemble into nanoparticles, act as surfactants for inorganic materials, or for their favorable interactions with lipid membranes. Despite their widespread use, there is still a range of questions about the physicochemical properties that are necessary to drive their interactions at biological interfaces. To fully understand these interactions requires a diverse range of complementary analytical techniques. In this work, a library of neutral amphipathic methacrylate copolymers is synthesized by reversible addition-fragmentation chain-transfer polymerization (RAFT) polymerization, to investigate the effect of polymer composition and nature of the hydrophobic comonomer on interactions with model lipid membranes. These materials are shown to interact with Langmuir lipid monolayers, and neutron reflectometry demonstrates that hydrophobic interactions lead to the polymers intercalating with the monolayers. More complex models of lipid bilayers are studied using an in situ quartz crystal microbalance (QCM) model and shows while the composition and hydrophobic comonomer affect the stability of these interactions, there is no effect on the viscoelasticity of the lipid membranes. The in-depth understanding of these interfacial interactions afforded by this suite of analytical tools will allow for more complex copolymers to be studied, providing a greater understanding of key processes in nanomedicine, such as cellular entry and endosomal escape.}
+}
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
