--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2458,6 +2458,22 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     abstract = {Abstract Amphipathic copolymers are useful materials for nanomedicine, owing to their ability to self-assemble into nanoparticles, act as surfactants for inorganic materials, or for their favorable interactions with lipid membranes. Despite their widespread use, there is still a range of questions about the physicochemical properties that are necessary to drive their interactions at biological interfaces. To fully understand these interactions requires a diverse range of complementary analytical techniques. In this work, a library of neutral amphipathic methacrylate copolymers is synthesized by reversible addition-fragmentation chain-transfer polymerization (RAFT) polymerization, to investigate the effect of polymer composition and nature of the hydrophobic comonomer on interactions with model lipid membranes. These materials are shown to interact with Langmuir lipid monolayers, and neutron reflectometry demonstrates that hydrophobic interactions lead to the polymers intercalating with the monolayers. More complex models of lipid bilayers are studied using an in situ quartz crystal microbalance (QCM) model and shows while the composition and hydrophobic comonomer affect the stability of these interactions, there is no effect on the viscoelasticity of the lipid membranes. The in-depth understanding of these interfacial interactions afforded by this suite of analytical tools will allow for more complex copolymers to be studied, providing a greater understanding of key processes in nanomedicine, such as cellular entry and endosomal escape.}
 }
 
+@article{GRESHAM2023,
+    title = {Comparing polymer-surfactant complexes to polyelectrolytes},
+    journal = {Journal of Colloid and Interface Science},
+    year = {2023},
+    issn = {0021-9797},
+    doi = {https://doi.org/10.1016/j.jcis.2023.10.101},
+    url = {https://www.sciencedirect.com/science/article/pii/S0021979723020349},
+    author = {Isaac J. Gresham and Edwin C. Johnson and Hayden Robertson and Joshua D. Willott and Grant B. Webber and Erica J. Wanless and Andrew R.J. Nelson and Stuart W. Prescott},
+    keywords = {poly(N-isopropylacrylamide), polymer brushes, sodium dodecylsulfate, surfactants, responsive polymers, electrolyte},
+    abstract = {Hypothesis
+    Understanding the complex interactions between polymers and surfactants is required to optimise commercially relevant systems such as paint, toothpaste and detergent. Neutral polymers complex with surfactants, forming ‘pearl necklace’ structures that are often conceptualised as pseudo-polyelectrolytes. Here we pose two questions to test the limits of this analogy: Firstly, in the presence of salt, do these polymer-surfactant systems behave like polyelectrolytes? Secondly, do polymer-surfactant complexes resist geometric confinement like polyelectrolytes?
+    Experiments
+    We test the limits of the pseudo-polyelectrolyte analogy through studying a poly(N-isopropylacrylamide) (PNIPAM) brush in the presence of sodium dodecylsulfate (SDS). Brushes are ideal for interrogating pseudo-polyelectrolytes, as neutral and polyelectrolyte brushes exhibit distinct and well understood behaviours. Spectroscopic ellipsometry, quartz crystal microbalance with dissipation monitoring (QCM-D), and neutron reflectometry (NR) were used to monitor the behaviour and structure of the PNIPAM-SDS system as a function of NaCl concentration. The ability of the PNIPAM-SDS complex to resist geometric confinement was probed with NR.
+    Findings
+    At a fixed SDS concentration below the zero-salt CMC, increasing NaCl concentration Image 1 promoted brush swelling due to an increase in osmotic pressure, not dissimilar to a weak polyelectrolyte. At these salt concentrations, the swelling of the brush could be described by a single parameter: the effective CMC. However, at high NaCl concentrations (e.g., Image 2) no brush collapse was observed at all (non-zero) concentrations of SDS studied, contrary to what is seen for many polyelectrolytes. Study of the polymer-surfactant system under confinement revealed that the physical volume of surfactant dominates the structure of the strongly confined system, which further differentiates it from the polyelectrolyte case.}
+}
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
