--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2409,7 +2409,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     abstract = {Abstract The effect of electron-beam patterning on the water uptake and ionic conductivity of Nafion films using a combination of X-ray photoelectron spectroscopy, quartz crystal microbalance studies, neutron reflectometry, and impedance spectroscopy is reported. The aim is to further characterize the nanoscale patterned Nafion structures recently used as a key element in novel ion-to-electron transducers by Gluschke et al. To enable this, the electron beam patterning process is developed for large areas, achieving patterning speeds approaching 1 cm2 h−1, and patterned areas as large as 7 cm2 for the neutron reflectometry studies. It is ultimately shown that electron-beam patterning affects both the water uptake and the ionic conductivity, depending on film thickness. Type-II adsorption isotherm behavior is seen for all films. For thick films (≈230 nm), a strong reduction in water uptake with electron-beam patterning is found. In contrast, for thin films (≈30 nm), electron-beam patterning enhances water uptake. Notably, for either thickness, the reduction in ionic conductivity arising from electron-beam patterning is kept to less than an order of magnitude. Mechanisms are proposed for the observed behavior based on the known complex morphology of Nafion films to motivate future studies of electron-beam processed Nafion.}
 }
 
-@article{gresham2023,
+@article{gresham2023b,
     author = {Gresham, Isaac and Lilley, Seamus and Nelson, Andrew and Koynov, Kaloian and Neto, Chiara},
     title = {Nanostructure Explains the Behavior of Slippery Covalently Attached Liquid Surfaces},
     journal = {Angewandte Chemie International Edition},
@@ -2458,7 +2458,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     abstract = {Abstract Amphipathic copolymers are useful materials for nanomedicine, owing to their ability to self-assemble into nanoparticles, act as surfactants for inorganic materials, or for their favorable interactions with lipid membranes. Despite their widespread use, there is still a range of questions about the physicochemical properties that are necessary to drive their interactions at biological interfaces. To fully understand these interactions requires a diverse range of complementary analytical techniques. In this work, a library of neutral amphipathic methacrylate copolymers is synthesized by reversible addition-fragmentation chain-transfer polymerization (RAFT) polymerization, to investigate the effect of polymer composition and nature of the hydrophobic comonomer on interactions with model lipid membranes. These materials are shown to interact with Langmuir lipid monolayers, and neutron reflectometry demonstrates that hydrophobic interactions lead to the polymers intercalating with the monolayers. More complex models of lipid bilayers are studied using an in situ quartz crystal microbalance (QCM) model and shows while the composition and hydrophobic comonomer affect the stability of these interactions, there is no effect on the viscoelasticity of the lipid membranes. The in-depth understanding of these interfacial interactions afforded by this suite of analytical tools will allow for more complex copolymers to be studied, providing a greater understanding of key processes in nanomedicine, such as cellular entry and endosomal escape.}
 }
 
-@article{GRESHAM2023,
+@article{GRESHAM2023a,
     title = {Comparing polymer-surfactant complexes to polyelectrolytes},
     journal = {Journal of Colloid and Interface Science},
     year = {2023},
@@ -2475,5 +2475,19 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     At a fixed SDS concentration below the zero-salt CMC, increasing NaCl concentration Image 1 promoted brush swelling due to an increase in osmotic pressure, not dissimilar to a weak polyelectrolyte. At these salt concentrations, the swelling of the brush could be described by a single parameter: the effective CMC. However, at high NaCl concentrations (e.g., Image 2) no brush collapse was observed at all (non-zero) concentrations of SDS studied, contrary to what is seen for many polyelectrolytes. Study of the polymer-surfactant system under confinement revealed that the physical volume of surfactant dominates the structure of the strongly confined system, which further differentiates it from the polyelectrolyte case.}
 }
 
+@article{doi:10.1021/acs.langmuir.3c02596,
+    author = {Robertson, Hayden and Gresham, Isaac J. and Nelson, Andrew R. J. and Gregory, Kasimir P. and Johnson, Edwin C. and Willott, Joshua D. and Prescott, Stuart W. and Webber, Grant B. and Wanless, Erica J.},
+    title = {Solvent-Modulated Specific Ion Effects: Poly(N-isopropylacrylamide) Brushes in Nonaqueous Electrolytes},
+    journal = {Langmuir},
+    volume = {0},
+    number = {0},
+    pages = {null},
+    year = {0},
+    doi = {10.1021/acs.langmuir.3c02596},
+    note ={PMID: 38117209},
+    URL = {https://doi.org/10.1021/acs.langmuir.3c02596},
+    eprint = {https://doi.org/10.1021/acs.langmuir.3c02596},
+    abstract = { Pertinent to cryopreservation as well as energy storage and batteries, nonaqueous electrolytes and their mixtures with water were investigated. In particular, specific ion-induced effects on the modulation of a poly(N-isopropylacrylamide) (PNIPAM) brush were investigated in various dimethyl sulfoxide (DMSO)–water solvent mixtures. Spectroscopic ellipsometry and neutron reflectometry were employed to probe changes in brush swelling and structure, respectively. In water-rich solvents (i.e., pure water and 6 mol \% DMSO), PNIPAM undergoes a swollen to collapsed thermotransition with increasing temperature, whereby a forward Hofmeister series was noted; K+ and Li+ electrolytes composed of SCN– and I– salted-in (stabilized) PNIPAM chains, and electrolytes of Cl– and Br– salted-out (destabilized) the polymer. The cation was seen to play a lesser role than that of the anion, merely modulating the magnitude of the anion effect. In 70 mol \% DMSO, a collapsed to swollen thermotransition was noted for PNIPAM. Here, concentration-dependent specific ion effects were observed; a forward series was observed in 0.2 mol \% electrolytes, whereas increasing the electrolyte concentration to 0.9 mol \% led to a series reversal. While no thermotransition was observed in pure DMSO, a solvent-induced specific ion series reversal was noted; SCN– destabilized the brush and Cl– stabilized the brush. Both series reversals are attributed to the delicate balance of interactions between the solvent, solute (ion), and substrate (brush). Namely, the stability of the solvent clusters was hypothesized to drive polymer solvation. }
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
