--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2498,4 +2498,20 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   publisher={Royal Society of Chemistry}
 }
 
+@article{doi:10.1021/acs.jpcb.3c08189,
+    author = {Li, Sichao and Hammond, Oliver S. and Nelson, Andrew and de Campo, Liliana and Moir, Michael and Recsei, Carl and Shimpi, Manishkumar R. and Glavatskih, Sergei and Pilkington, Georgia A. and Mudring, Anja-Verena and Rutland, Mark W.},
+    title = {Anion Architecture Controls Structure and Electroresponsivity of Anhalogenous Ionic Liquids in a Sustainable Fluid},
+    journal = {The Journal of Physical Chemistry B},
+    volume = {0},
+    number = {0},
+    pages = {null},
+    year = {0},
+    doi = {10.1021/acs.jpcb.3c08189},
+    note ={PMID: 38639329},
+    URL = {https://doi.org/10.1021/acs.jpcb.3c08189},
+    eprint = {https://doi.org/10.1021/acs.jpcb.3c08189},
+    abstract = {Three nonhalogenated ionic liquids (ILs) dissolved in 2-ethylhexyl laurate (2-EHL), a biodegradable oil, are investigated in terms of their bulk and electro-interfacial nanoscale structures using small-angle neutron scattering (SANS) and neutron reflectivity (NR). The ILs share the same trihexyl(tetradecyl)phosphonium ([P6,6,6,14]+) cation paired with different anions, bis(mandelato)borate ([BMB]−), bis(oxalato)borate ([BOB]−), and bis(salicylato)borate ([BScB]−). SANS shows a high aspect ratio tubular self-assembly structure characterized by an IL core of alternating cations and anions with a 2-EHL-rich shell or corona in the bulk, the geometry of which depends upon the anion structure and concentration. NR also reveals a solvent-rich interfacial corona layer. Their electro-responsive behavior, pertaining to the structuring and composition of the interfacial layers, is also influenced by the anion identity. [P6,6,6,14][BOB] exhibits distinct electroresponsiveness to applied potentials, suggesting an ion exchange behavior from cation-dominated to anion-rich. Conversely, [P6,6,6,14][BMB] and [P6,6,6,14][BScB] demonstrate minimal electroresponses across all studied potentials, related to their different dissociative and diffusive behavior. A mixed system is dominated by the least soluble IL but exhibits an increase in disorder. This work reveals the subtlety of anion architecture in tuning bulk and electro-interfacial properties, offering valuable molecular insights for deploying nonhalogenated ILs as additives in biodegradable lubricants and supercapacitors.}
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
