--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2500,6 +2500,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
 
 @article{doi:10.1021/acs.jpcb.3c08189,
     author = {Li, Sichao and Hammond, Oliver S. and Nelson, Andrew and de Campo, Liliana and Moir, Michael and Recsei, Carl and Shimpi, Manishkumar R. and Glavatskih, Sergei and Pilkington, Georgia A. and Mudring, Anja-Verena and Rutland, Mark W.},
+    author = {Li, Sichao and Hammond, Oliver S. and Nelson, Andrew and de Campo, Liliana and Moir, Michael and Recsei, Carl and Shimpi, Manishkumar R. and Glavatskih, Sergei and Pilkington, Georgia A. and Mudring, Anja-Verena and Rutland, Mark W.},
     title = {Anion Architecture Controls Structure and Electroresponsivity of Anhalogenous Ionic Liquids in a Sustainable Fluid},
     journal = {The Journal of Physical Chemistry B},
     volume = {0},
@@ -2513,5 +2514,17 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     abstract = {Three nonhalogenated ionic liquids (ILs) dissolved in 2-ethylhexyl laurate (2-EHL), a biodegradable oil, are investigated in terms of their bulk and electro-interfacial nanoscale structures using small-angle neutron scattering (SANS) and neutron reflectivity (NR). The ILs share the same trihexyl(tetradecyl)phosphonium ([P6,6,6,14]+) cation paired with different anions, bis(mandelato)borate ([BMB]−), bis(oxalato)borate ([BOB]−), and bis(salicylato)borate ([BScB]−). SANS shows a high aspect ratio tubular self-assembly structure characterized by an IL core of alternating cations and anions with a 2-EHL-rich shell or corona in the bulk, the geometry of which depends upon the anion structure and concentration. NR also reveals a solvent-rich interfacial corona layer. Their electro-responsive behavior, pertaining to the structuring and composition of the interfacial layers, is also influenced by the anion identity. [P6,6,6,14][BOB] exhibits distinct electroresponsiveness to applied potentials, suggesting an ion exchange behavior from cation-dominated to anion-rich. Conversely, [P6,6,6,14][BMB] and [P6,6,6,14][BScB] demonstrate minimal electroresponses across all studied potentials, related to their different dissociative and diffusive behavior. A mixed system is dominated by the least soluble IL but exhibits an increase in disorder. This work reveals the subtlety of anion architecture in tuning bulk and electro-interfacial properties, offering valuable molecular insights for deploying nonhalogenated ILs as additives in biodegradable lubricants and supercapacitors.}
 }
 
+@article{ROBERTSON2024103238,
+    title = {Illuminating the nanostructure of diffuse interfaces: Recent advances and future directions in reflectometry techniques},
+    journal = {Advances in Colloid and Interface Science},
+    pages = {103238},
+    year = {2024},
+    issn = {0001-8686},
+    doi = {https://doi.org/10.1016/j.cis.2024.103238},
+    url = {https://www.sciencedirect.com/science/article/pii/S0001868624001611},
+    author = {Hayden Robertson and Isaac J. Gresham and Andrew R.J. Nelson and Stuart W. Prescott and Grant B. Webber and Erica J. Wanless},
+    keywords = {Solvated interfaces, Diffuse interfaces, Soft matter, Polymer brushes, Monolayers, Reflectometry techniques, X-ray reflectometry, Neutron reflectometry, Ellipsometry, Interfacial phenomena, Nanoscale characterisation},
+    abstract = {Diffuse soft matter interfaces take many forms, from end-tethered polymer brushes or adsorbed surfactants to self-assembled layers of lipids. These interfaces play crucial roles across a multitude of fields, including materials science, biophysics, and nanotechnology. Understanding the nanostructure and properties of these interfaces is fundamental for optimising their performance and designing novel functional materials. In recent years, reflectometry techniques, in particular neutron reflectometry, have emerged as powerful tools for elucidating the intricate nanostructure of soft matter interfaces with remarkable precision and depth. This review provides an overview of selected recent developments in reflectometry and their applications for illuminating the nanostructure of diffuse interfaces. We explore various principles and methods of neutron and X-ray reflectometry, as well as ellipsometry, and discuss advances in their experimental setups and data analysis approaches. Improvements to experimental neutron reflectometry methods have enabled greater time resolution in kinetic measurements and elucidation of diffuse structure under shear or confinement, while innovation in analysis protocols has significantly reduced data processing times, facilitated co-refinement of reflectometry data from multiple instruments and provided greater-than-ever confidence in proposed structural models. Furthermore, we highlight some significant research findings enabled by these techniques, revealing the organisation, dynamics, and interfacial phenomena at the nanoscale. We also discuss future directions and potential advancements in reflectometry techniques. By shedding light on the nanostructure of diffuse interfaces, reflectometry techniques enable the rational design and tailoring of interfaces with enhanced properties and functionalities.}
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
