--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2401,6 +2401,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     journal = {Advanced Electronic Materials},
     volume = {n/a},
     number = {n/a},
+    year = {2023},
     pages = {2300199},
     keywords = {bioelectronics, electron-beam patterning, ionic conductivity, nafion, neuromorphic computing},
     doi = {https://doi.org/10.1002/aelm.202300199},
@@ -2416,6 +2417,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     volume = {n/a},
     number = {n/a},
     pages = {e202308008},
+    year = {2023},
     keywords = {slippery surfaces, droplet mobility, self-assembled monolayers, polymer brush, single-molecule force spectroscopy},
     doi = {https://doi.org/10.1002/anie.202308008},
     url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/anie.202308008},
@@ -2450,8 +2452,9 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     author = {Frost, Charlotte and Wiedbrauk, Sandra and Graham, Elizabeth and Yepuri, Nageshwar R. and Nelson, Andrew R. J. and Boase, Nathan R. B.},
     title = {Measuring the Interactions and Influence of Amphipathic Copolymers with Lipid Monolayers and Bilayers as Models of Biological Membranes},
     journal = {Macromolecular Chemistry and Physics},
-    volume = {n/a},
-    number = {n/a},
+    volume = {224},
+    number = {24},
+    year = {2023},
     pages = {2300315},
     keywords = {lipids, nanomedicines, neutron reflectometry, polymers, quartz crystal microbalance},
     doi = {10.1002/macp.202300315},
@@ -2484,10 +2487,11 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     pages = {null},
     year = {0},
     doi = {10.1021/acs.langmuir.3c02596},
-    note ={PMID: 38117209},
+    note = {PMID: 38117209},
     URL = {https://doi.org/10.1021/acs.langmuir.3c02596},
     eprint = {https://doi.org/10.1021/acs.langmuir.3c02596},
     abstract = { Pertinent to cryopreservation as well as energy storage and batteries, nonaqueous electrolytes and their mixtures with water were investigated. In particular, specific ion-induced effects on the modulation of a poly(N-isopropylacrylamide) (PNIPAM) brush were investigated in various dimethyl sulfoxide (DMSO)–water solvent mixtures. Spectroscopic ellipsometry and neutron reflectometry were employed to probe changes in brush swelling and structure, respectively. In water-rich solvents (i.e., pure water and 6 mol \% DMSO), PNIPAM undergoes a swollen to collapsed thermotransition with increasing temperature, whereby a forward Hofmeister series was noted; K+ and Li+ electrolytes composed of SCN– and I– salted-in (stabilized) PNIPAM chains, and electrolytes of Cl– and Br– salted-out (destabilized) the polymer. The cation was seen to play a lesser role than that of the anion, merely modulating the magnitude of the anion effect. In 70 mol \% DMSO, a collapsed to swollen thermotransition was noted for PNIPAM. Here, concentration-dependent specific ion effects were observed; a forward series was observed in 0.2 mol \% electrolytes, whereas increasing the electrolyte concentration to 0.9 mol \% led to a series reversal. While no thermotransition was observed in pure DMSO, a solvent-induced specific ion series reversal was noted; SCN– destabilized the brush and Cl– stabilized the brush. Both series reversals are attributed to the delicate balance of interactions between the solvent, solute (ion), and substrate (brush). Namely, the stability of the solvent clusters was hypothesized to drive polymer solvation. }
+}
 
 @article{higgins2024hysteresis,
   title={Hysteresis in phase volumes, compositions and interfacial roughness in model OPV-small-molecule/polymer thin-films},
@@ -2499,7 +2503,6 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
 }
 
 @article{doi:10.1021/acs.jpcb.3c08189,
-    author = {Li, Sichao and Hammond, Oliver S. and Nelson, Andrew and de Campo, Liliana and Moir, Michael and Recsei, Carl and Shimpi, Manishkumar R. and Glavatskih, Sergei and Pilkington, Georgia A. and Mudring, Anja-Verena and Rutland, Mark W.},
     author = {Li, Sichao and Hammond, Oliver S. and Nelson, Andrew and de Campo, Liliana and Moir, Michael and Recsei, Carl and Shimpi, Manishkumar R. and Glavatskih, Sergei and Pilkington, Georgia A. and Mudring, Anja-Verena and Rutland, Mark W.},
     title = {Anion Architecture Controls Structure and Electroresponsivity of Anhalogenous Ionic Liquids in a Sustainable Fluid},
     journal = {The Journal of Physical Chemistry B},
