--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2375,6 +2375,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   title   = {Investigating Adsorption of Cellulose Nanocrystals at Air–Liquid and Substrate–Liquid Interfaces after pH Manipulation},
   journal = {Advanced Materials Interfaces},
   year    = {2023},
+  volume = {10},
   number  = {2202452},
   doi     = {10.1002/admi.202202452},
 }
