--- a/my_publications.bib
+++ b/my_publications.bib
@@ -1991,6 +1991,7 @@ observed. These results emphasize the importance of using thermally stable mater
   year    = {2020},
   volume  = {10},
   pages   = {2439},
+  pages   = {2439},
   doi     = {10.3390/nano10122439},
 }
 
@@ -2266,6 +2267,18 @@ observed. These results emphasize the importance of using thermally stable mater
   volume  = {9},
   pages   = {2200791},
   doi     = {https://doi.org/10.1002/admi.202200791},
+}
+
+@article{biswas2022assembly,
+  title={The assembly mechanism and mesoscale architecture of protein--polysaccharide complexes formed at the solid--liquid interface},
+  author={Biswas, Shanta and Melton, Laurence D and Nelson, Andrew RJ and Le Brun, Anton P and Heinrich, Frank and McGillivray, Duncan J and Xu, Amy Y},
+  journal={Langmuir},
+  volume={38},
+  number={41},
+  pages={12551--12561},
+  year={2022},
+  doi={https://doi.org/10.1021/acs.langmuir.2c02003},
+  publisher={ACS Publications}
 }
 
 @Article{GRESHAM2022,
