added volume info

--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2496,10 +2496,10 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     author = {Robertson, Hayden and Gresham, Isaac J. and Nelson, Andrew R. J. and Gregory, Kasimir P. and Johnson, Edwin C. and Willott, Joshua D. and Prescott, Stuart W. and Webber, Grant B. and Wanless, Erica J.},
     title = {Solvent-Modulated Specific Ion Effects: Poly(N-isopropylacrylamide) Brushes in Nonaqueous Electrolytes},
     journal = {Langmuir},
-    volume = {0},
-    number = {0},
-    pages = {null},
-    year = {0},
+    volume = {40},
+    number = {1},
+    pages = {335-347},
+    year = {2023},
     doi = {10.1021/acs.langmuir.3c02596},
     note = {PMID: 38117209},
     URL = {https://doi.org/10.1021/acs.langmuir.3c02596},
@@ -2520,10 +2520,10 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     author = {Li, Sichao and Hammond, Oliver S. and Nelson, Andrew and de Campo, Liliana and Moir, Michael and Recsei, Carl and Shimpi, Manishkumar R. and Glavatskih, Sergei and Pilkington, Georgia A. and Mudring, Anja-Verena and Rutland, Mark W.},
     title = {Anion Architecture Controls Structure and Electroresponsivity of Anhalogenous Ionic Liquids in a Sustainable Fluid},
     journal = {The Journal of Physical Chemistry B},
-    volume = {0},
-    number = {0},
-    pages = {null},
-    year = {0},
+    volume = {128},
+    number = {17},
+    pages = {4231-4242},
+    year = {2024},
     doi = {10.1021/acs.jpcb.3c08189},
     note ={PMID: 38639329},
     URL = {https://doi.org/10.1021/acs.jpcb.3c08189},
