--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2544,4 +2544,12 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
     abstract = {Diffuse soft matter interfaces take many forms, from end-tethered polymer brushes or adsorbed surfactants to self-assembled layers of lipids. These interfaces play crucial roles across a multitude of fields, including materials science, biophysics, and nanotechnology. Understanding the nanostructure and properties of these interfaces is fundamental for optimising their performance and designing novel functional materials. In recent years, reflectometry techniques, in particular neutron reflectometry, have emerged as powerful tools for elucidating the intricate nanostructure of soft matter interfaces with remarkable precision and depth. This review provides an overview of selected recent developments in reflectometry and their applications for illuminating the nanostructure of diffuse interfaces. We explore various principles and methods of neutron and X-ray reflectometry, as well as ellipsometry, and discuss advances in their experimental setups and data analysis approaches. Improvements to experimental neutron reflectometry methods have enabled greater time resolution in kinetic measurements and elucidation of diffuse structure under shear or confinement, while innovation in analysis protocols has significantly reduced data processing times, facilitated co-refinement of reflectometry data from multiple instruments and provided greater-than-ever confidence in proposed structural models. Furthermore, we highlight some significant research findings enabled by these techniques, revealing the organisation, dynamics, and interfacial phenomena at the nanoscale. We also discuss future directions and potential advancements in reflectometry techniques. By shedding light on the nanostructure of diffuse interfaces, reflectometry techniques enable the rational design and tailoring of interfaces with enhanced properties and functionalities.}
 }
 
+@article{cozzolino2024mimicking,
+  title={Mimicking the hair surface for neutron reflectometry},
+  author={Cozzolino, Serena and Gutfreund, Philipp and Vorobiev, Alexei and Devishvili, Anton and Greaves, Andrew and Nelson, Andrew and Yepuri, Nageshwar and Luengo, Gustavo S and Rutland, Mark W},
+  journal={Soft Matter},
+  year={2024},
+  publisher={Royal Society of Chemistry}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
