--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2549,6 +2549,7 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   author={Cozzolino, Serena and Gutfreund, Philipp and Vorobiev, Alexei and Devishvili, Anton and Greaves, Andrew and Nelson, Andrew and Yepuri, Nageshwar and Luengo, Gustavo S and Rutland, Mark W},
   journal={Soft Matter},
   year={2024},
+  doi={10.1039/D4SM00784K},
   publisher={Royal Society of Chemistry}
 }
 
