--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2553,4 +2553,13 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   publisher={Royal Society of Chemistry}
 }
 
+@article{siddiqueinvestigating,
+  title={Investigating Impacts of Amino Acids on the Structural Stability of Anionic Biomembranes},
+  author={Siddique, Arslan and Lowe, Lauren A and Kanti De, Soumya and Loo, Daniel WK and Le Brun, Anton P and Nelson, Andrew RJ and Wang, Anna},
+  journal={ChemSystemsChem},
+  pages={e202400065},
+  doi={10.1002/syst.202400065},
+  publisher={Wiley Online Library}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
