--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2562,4 +2562,14 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   publisher={Wiley Online Library}
 }
 
+@article{robertson2025solvent,
+  title={Solvent and Ion-Mediated Behavior of a Thermoresponsive Brush: Specific Ion Effects in Methanol-Water Electrolytes},
+  author={Robertson, Hayden and Willott, Joshua D and Nelson, Andrew RJ and Prescott, Stuart W and Wanless, Erica J and Webber, Grant, B},
+  journal={Macromolecular Rapid Communications},
+  pages={2500093},
+  year={2025},
+  doi={10.1002/marc.202500093},
+  publisher={Wiley Online Library}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
