--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2572,4 +2572,23 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   publisher={Wiley Online Library}
 }
 
+@article{DUNLOP2026139233,
+  title = {Strong anionic polyelectrolyte brush exhibits specific ion dependent brush re-swelling in hypersaline conditions},
+  journal = {Journal of Colloid and Interface Science},
+  volume = {703},
+  pages = {139233},
+  year = {2026},
+  issn = {0021-9797},
+  doi = {https://doi.org/10.1016/j.jcis.2025.139233},
+  url = {https://www.sciencedirect.com/science/article/pii/S0021979725026256},
+  author = {Geran S. Dunlop and Hayden Robertson and Zachary {Di Pietro} and Stuart W. Prescott and Andrew R.J. Nelson and Vincent S.J. Craig and Erica J. Wanless and Grant B. Webber},
+  keywords = {Underscreening, Polyelectrolyte, Polymer brushes, Neutron reflectometry, Spectroscopic ellipsometry},
+  abstract = {Hypothesis
+Hypersaline environments have been found to contain long-range electrostatic interactions, with significant implications for the behaviour of soft and interfacial systems. We hypothesise that a strong anionic polyelectrolyte brush will exhibit re-entrant swelling behaviour, such that the impact of salt on the brush response reverses, and further addition of salt leads to better solubilisation of the polymer.
+Experiments
+The behaviour of the strong anionic poly(3-sulfopropyl methacrylate) (PSPMA) brushes was characterised using ellipsometry, quartz crystal microbalance with dissipation monitoring (QCM-D) and neutron reflectometry (NR) as a function of salt concentration up to the solubility limit of a variety of monovalent salts. These complementary techniques were used to resolve changes in brush thickness, viscoelastic properties and internal nanostructure.
+Findings
+The brush showed non-monotonic swelling as a function of salt concentration: an initial brush collapse with increasing salt concentration was followed by re-swelling at high salt concentration, marking a re-entrant transition. The salt concentrations where this re-entrant behaviour occurs is correlated strongly with the anion's radial charge density, highlighting a pronounced anion-specific effect whereby the less charge dense anions induce re-entrant behaviour at lower concentrations. Neutron reflectometry revealed non-monotonic polymer volume fraction profiles in the underscreening regime, consistent with polymer bundling within the brush. This combined study examining the nanostructure of planar polyelectrolyte electrolyte brushes provides detailed evidence of anion-specific re-entrant behaviour in concentrated monovalent electrolytes.}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
