--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2591,4 +2591,19 @@ Findings
 The brush showed non-monotonic swelling as a function of salt concentration: an initial brush collapse with increasing salt concentration was followed by re-swelling at high salt concentration, marking a re-entrant transition. The salt concentrations where this re-entrant behaviour occurs is correlated strongly with the anion's radial charge density, highlighting a pronounced anion-specific effect whereby the less charge dense anions induce re-entrant behaviour at lower concentrations. Neutron reflectometry revealed non-monotonic polymer volume fraction profiles in the underscreening regime, consistent with polymer bundling within the brush. This combined study examining the nanostructure of planar polyelectrolyte electrolyte brushes provides detailed evidence of anion-specific re-entrant behaviour in concentrated monovalent electrolytes.}
 }
 
+@article{xxx9-8tk2,
+  title = {High-speed x-ray reflectometry for characterization of thin film growth at high deposition rates},
+  author = {Schumi-Marecek, David and Nelson, Andrew and Pfeiler, Erwin and Eder, Maximilian and Bertram, Florian and Kowarik, Stefan},
+  journal = {Phys. Rev. B},
+  volume = {112},
+  issue = {23},
+  pages = {235304},
+  numpages = {12},
+  year = {2025},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/xxx9-8tk2},
+  url = {https://link.aps.org/doi/10.1103/xxx9-8tk2}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
