--- a/my_publications.bib
+++ b/my_publications.bib
@@ -2558,6 +2558,8 @@ Surface sensitive techniques unveiled a non-monotonic trend in salting-out abili
   author={Siddique, Arslan and Lowe, Lauren A and Kanti De, Soumya and Loo, Daniel WK and Le Brun, Anton P and Nelson, Andrew RJ and Wang, Anna},
   journal={ChemSystemsChem},
   pages={e202400065},
+  year={2025},
+  volume={7},
   doi={10.1002/syst.202400065},
   publisher={Wiley Online Library}
 }
